docs/errors/examples/return-type-mismatch-string-for-int/return-type-mismatch-string-for-int.expected.txt
error[E0005]: return type mismatch
  --> return-type-mismatch-string-for-int.grob:5:16
   |
 5 |         return "OK"
   |                ^^^^
   |
   = note: 'statusCode' declares return type int
   = note: this expression has type string
